# helpdesk

./: .eslintrc.js  .git-blame-ignore-revs  .gitignore  .gitmodules  .lintstagedrc  .mergify.yml  .pr_description.md  .pre-commit-config.yaml  .prettierrc.json  .releaserc  AGENTS.md  CANNED_RESPONSES_README.md  CLAUDE.md  COMPONENT_MIGRATION_GUIDE.md  DEPLOYMENT_CHECKLIST.md  LICENSE  MANIFEST.in  MIGRATION_SUMMARY.md  PRODUCTION_FIX.md  PRODUCTION_PYTHON_CACHE_FIX.md  RAG-doc.md  README-AWS-SES.md  README-LOGIN.md  README.md  check_production_method.py  codecov.yml  commitlint.config.js  commitlint.config.mjs  configure_ses.py  force_reload_backend.py  format.sh  fulltextsearch_spec.md  global_replace_colors.py  licence.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  verify_reply_via_agent.py
.github/: release.yml
desk/: .gitignore  DAISYUI-MIGRATION-STRATEGY.md  MIGRATION-GUIDE.md  README.md  auto-imports.d.ts  common_site_config.json  index.html  lucide.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite-helpers.ts  vite.config.js  vitest.config.ts
desk-react/: .eslintrc.cjs  .gitignore  README.md  dump.rdb  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
docker/: docker-compose.yml  init.sh
docs/: erpnext-customer-sync.md  i18n-translation-plan.md
frappedesk/: __init__.py  hooks.py  limits.py  modules.txt  overrides.py  patches.txt  utils.py
helpdesk-node/: .env.example  .env.test  .gitignore  PM2-GUIDE.md  README.md  TESTING.md  docker-compose.test.yml  ecosystem.config.js  package.json  ssl-setup.md  tsconfig.json  vitest.config.ts
(+2531 files in other folders)
