[project]
name = "helpdesk"
authors = [
    { name = "Frappe Technologies Pvt Ltd", email = "hello@frappe.io"}
]
description = "Open Source Customer Service Software"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # Core dependencies
    "textblob==0.18.0.post0",
]
[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.40.4,<17.0.0"
telephony = ">=0.0.1,<1.0.0"

[tool.bench.assets]
build_dir = "./desk"
out_dir = "./helpdesk/public/desk"
index_html_path = "./helpdesk/www/helpdesk/index.html"

[project.urls]
Homepage = "https://frappe.io/helpdesk"
Repository = "https://github.com/frappe/helpdesk.git"
"Bug Reports" = "https://github.com/frappe/helpdesk/issues"
